<resources>
    <string name="app_name">KanaRand</string>
    <string name="radioButton1">Katakana</string>
    <string name="radioButton2">Hiragana</string>
    <string name="radioButton3">Russian</string>
    <string name="radioButton4">English</string>
    <string name="Random_Row">Random in Row</string>
    <string name="Row">Row:</string>
    <string name="Full">Full Random</string>
    <string name="Switch1">Transcription</string>
    <string name="Switch2">Han/Dakuten</string>
    <string name="Text" translatable="false">あ</string>
    <string name="NumberRand">Generate number</string>
    <string name="BackToMenu">Back to menu</string>
    <string name="NumberPage">Numbers</string>
    <string name="KanaPage">Kana page</string>
    <string name="Switch3">Random</string>
    <string name="Switch4">Transcription</string>
    <string name="TrueRES">True:</string>
    <string name="NumberR">Numbers</string>
    <string name="TimeR">Generate time</string>
    <string name="Types">Pressed:</string>
    <string name="Answer">Answer</string>
    <string name="Calendar">Calendar</string>
    <string name="Time">Time</string>
    <string name="Generate">Generate</string>
</resources>
