<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:layout_editor_absoluteY="81dp">
tools:layout_editor_absoluteY="81dp">
android:configChanges="locale"

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:onClick="fu"
        android:text="@string/Random_Row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="236dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="show"
        android:text="@string/Text"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="150sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/kana_select"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="77dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Row"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

<Switch
    android:id="@+id/switch1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:text="@string/Switch1"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4" />

<RadioGroup
    android:id="@+id/radioGroup2"
    android:layout_width="0dp"
    android:layout_height="34dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:orientation="horizontal"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/switch1">

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="onClickRadioSelectTest2"
        android:text="@string/radioButton3" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClickRadioSelectTest2"
        android:text="@string/radioButton4" />
</RadioGroup>

<RadioGroup
    android:id="@+id/radioGroup1"
    android:layout_width="0dp"
    android:layout_height="34dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/switch2">

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checked="false"
        android:onClick="onClickRadioSelectTest"
        android:text="@string/radioButton1" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checked="true"
        android:onClick="onClickRadioSelectTest"
        android:text="@string/radioButton2" />
</RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:onClick="full_rand"
        android:text="@string/Full"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

<Switch
    android:id="@+id/switch2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:text="@string/Switch2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/kana_select" />

    <TableRow
        android:id="@+id/tbr"
        android:layout_width="390dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/bt_ch1"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:onClick="click_bt_ch"
            android:text="ХЗ" />

        <Button
            android:id="@+id/bt_ch2"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:onClick="click_bt_ch"
            android:text="ХЗ" />

        <Button
            android:id="@+id/bt_ch3"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:onClick="click_bt_ch"
            android:text="ХЗ" />

        <Button
            android:id="@+id/bt_ch4"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:onClick="click_bt_ch"
            android:text="ХЗ" />

        <Button
            android:id="@+id/bt_ch5"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:onClick="click_bt_ch"
            android:text="ХЗ" />
    </TableRow>

    <TextView
        android:id="@+id/textViewRES"
        android:layout_width="111dp"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clean_RES"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>