<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <TableRow
        android:id="@+id/tbr2"
        android:layout_width="390dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <Button
            android:id="@+id/num_bt_ch1"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:onClick="click_bt_ch2"
            android:text="ХЗ" />

        <Button
            android:id="@+id/num_bt_ch2"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:onClick="click_bt_ch2"
            android:text="ХЗ" />

        <Button
            android:id="@+id/num_bt_ch3"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:onClick="click_bt_ch2"
            android:text="ХЗ" />

        <Button
            android:id="@+id/num_bt_ch4"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:onClick="click_bt_ch2"
            android:text="ХЗ" />

        <Button
            android:id="@+id/num_bt_ch5"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:onClick="click_bt_ch2"
            android:text="ХЗ" />
    </TableRow>

    <RadioGroup
        android:id="@+id/radioGroupJR"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbr2">

        <RadioButton
            android:id="@+id/radioButtonR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="onClickRadioSelectTestJP"
            android:text="@string/radioButton3" />

        <RadioButton
            android:id="@+id/radioButtonJ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="onClickRadioSelectTestJP"
            android:text="@string/radioButton2" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupNT"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbr2">

        <RadioButton
            android:id="@+id/radioButtonN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onClickRadioSelectTestNT"
            android:text="@string/NumberR" />

        <RadioButton
            android:id="@+id/radioButtonT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickRadioSelectTestNT"
            android:text="@string/TimeR" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="397dp"
        android:layout_height="167dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="show2"
        android:text="@string/Text"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="150sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRES2"
        android:layout_width="111dp"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="number"
        android:text="@string/NumberRand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/switch3"
        tools:text="@string/NumberRand" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Switch3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupJR" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Switch4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupNT" />

</android.support.constraint.ConstraintLayout>